refactor(ui): rename fade css class

--- a/receptionist.html
+++ b/receptionist.html
@@ -210,8 +210,12 @@
   /*====================
          Shared CSS
     ====================*/
-  .show {
+  .fade {
     opacity: 1;
+  }
+
+  .show {
+    display: block;
   }
 </style>
 
@@ -288,6 +292,6 @@
 
 <!-- Trigger -->
 <button class="fab">
-  <span class="fab-closed-text show">🏁 Start Here !</span>
+  <span class="fab-closed-text fade">🏁 Start Here !</span>
   <span class="fab-opened-text">✖️ Close</span>
 </button>
