fix(ui): minor card ui changes

--- a/receptionist.html
+++ b/receptionist.html
@@ -8,9 +8,6 @@
     /*=== Primary ===*/
     --bg: #00b9ff;
     --txt: #ffffff;
-    /*=== Secondary ===*/
-    --bg2: #ffffff;
-    --text2: #000000;
   }
 
   ::-webkit-scrollbar {
@@ -174,12 +171,12 @@
   }
 
   .list {
-    margin: 0 0 1.25rem 0.75rem;
+    margin: 0 0 0 0.75rem;
     padding: 0;
     list-style: none;
     overflow-x: hidden;
     overflow-y: auto;
-    height: 90%;
+    height: 95%;
   }
 
   .list-item {
@@ -192,7 +189,7 @@
   }
 
   .list-item-mark {
-      margin-right: 0.25rem;
+    margin-right: 0.25rem;
   }
 
   .list-item-title {
