feat(ui): add no date warning span

--- a/receptionist.html
+++ b/receptionist.html
@@ -204,6 +204,11 @@
     margin-left: 2rem;
   }
 
+  .empty-list-notice {
+    display: none;
+    color: gray;
+  }
+
   /*====================
          Shared CSS
     ====================*/
@@ -281,6 +286,8 @@
             >You can change your account avatar in settings page</span
           >
         </li>
+
+        <li class="empty-list-notice">No Todo Items Yet.</li>
       </ul>
     </div>
     <div class="card-tip"></div>
