--- a/demo/index.html
+++ b/demo/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Receptionist - Demo</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Import Receptionist -->
     <script type="module" src="../receptionist.js"></script>
-</head>
-<body style="background: white">
-
-<!-- Add Receptionist -->
-<saas-receptionist></saas-receptionist>
-</body>
+  </head>
+  <body>
+    <!-- Add Receptionist -->
+    <saas-receptionist></saas-receptionist>
+  </body>
 </html>
