feat(props): display 'data' array values in html list
- added 'checked' property validation (boolean)
- added some placeholder data in demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <!-- Add Receptionist -->
-    <saas-receptionist></saas-receptionist>
+    <saas-receptionist
+      data="[{
+        checked: true,
+        name: 'Add profile image',
+        description: 'You can change your account avatar in settings page'
+      }]"
+    ></saas-receptionist>
   </body>
 </html>
