feat(demo): add more demo data inc settings

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,7 +14,29 @@
         checked: true,
         name: 'Add profile image',
         description: 'You can change your account avatar in settings page'
-      }]"
+      },
+      {
+        checked: true,
+        name: 'Add profile image',
+        description: 'You can change your account avatar in settings page'
+      },
+      {
+        checked: false,
+        name: 'Add profile image',
+        description: 'You can change your account avatar in settings page'
+      },
+      {
+        checked: true,
+        name: 'Add profile image',
+        description: 'You can change your account avatar in settings page'
+      },
+      {
+        checked: true,
+        name: 'Add profile image',
+        description: 'You can change your account avatar in settings page'
+      }
+      ]"
+      settings="{ backgroundColor : '#000000', textColor : '#ffffff'}"
     ></saas-receptionist>
   </body>
 </html>
